libexec_SCRIPTS=check_ups_health
GL_MODULES=\
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Extraopts.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Getopt.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/CSF.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/SysDescPrettify.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/EATONATS2MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/EATONEMPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/EATONEPDUMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/EATONSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPAGENTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPCONDITIONSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPENVIRONMENTALMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPFLEXIBLEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPFLEXIBLECONDITIONSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPPOWERMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPREGISTRATIONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LIEBERTGPSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MGSNMPUPSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MIB2MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETVISIONV6MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/POWERNETMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPFRAMEWORKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UPSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UPSV4MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/XPPCMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/XUPSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UPSMANRIELLOSENTRMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ATSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ATSTHREEPHASEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/EPPCMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HOSTRESOURCESMIB.pm
EXTRA_MODULES=\
  CheckUpsHealth/APC/Powermib/UPS/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/APC/Powermib/UPS/Component/BatterySubsystem.pm \
  CheckUpsHealth/APC/Powermib/UPS.pm \
  CheckUpsHealth/APC/Powermib.pm \
  CheckUpsHealth/APC.pm \
  CheckUpsHealth/Socomec/Netvision/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/Socomec/Netvision/Component/BatterySubsystem.pm \
  CheckUpsHealth/Socomec/Netvision.pm \
  CheckUpsHealth/Socomec.pm \
  CheckUpsHealth/UPS/Component/AlarmSubsystem.pm \
  CheckUpsHealth/UPS/Component/SelftestSubsystem.pm \
  CheckUpsHealth/UPS/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/UPS/Component/BatterySubsystem.pm \
  CheckUpsHealth/UPS.pm \
  CheckUpsHealth/XUPS/Component/AlarmSubsystem.pm \
  CheckUpsHealth/XUPS/Component/TempHumSubsystem.pm \
  CheckUpsHealth/XUPS/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/XUPS/Component/BatterySubsystem.pm \
  CheckUpsHealth/XUPS.pm \
  CheckUpsHealth/EPPC/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/EPPC/Component/BatterySubsystem.pm \
  CheckUpsHealth/EPPC.pm \
  CheckUpsHealth/XPPC/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/XPPC/Component/BatterySubsystem.pm \
  CheckUpsHealth/XPPC.pm \
  CheckUpsHealth/V4/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/V4/Component/BatterySubsystem.pm \
  CheckUpsHealth/V4.pm \
  CheckUpsHealth/MerlinGerin/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/MerlinGerin/Component/BatterySubsystem.pm \
  CheckUpsHealth/MerlinGerin.pm \
  CheckUpsHealth/Liebert/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/Liebert/Component/BatterySubsystem.pm \
  CheckUpsHealth/Liebert.pm \
  CheckUpsHealth/ATS/ATSTHREEPHASE/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/ATS/ATSTHREEPHASE/Component/BatterySubsystem.pm \
  CheckUpsHealth/ATS.pm \
  CheckUpsHealth/Eaton/ATS2/Component/BatterySubsystem.pm \
  CheckUpsHealth/Eaton/ATS2/Component/EnvironmentalSubsystem.pm \
  CheckUpsHealth/Eaton.pm \
  CheckUpsHealth/Device.pm

SED=/bin/sed
GREP=/bin/grep
CAT=/bin/cat
ECHO=/bin/echo
if DISABLE_STANDALONE
STANDALONE = no
else
STANDALONE = yes
endif

SUFFIXES = .pl .pm .sh

VPATH=$(top_srcdir) $(top_srcdir)/plugins-scripts $(top_srcdir)/plugins-scripts/t

EXTRA_DIST=$(libexec_SCRIPTS).pl $(EXTRA_MODULES) $(GL_MODULES)

CLEANFILES=$(libexec_SCRIPTS)

AM_INSTALL_PROGRAM_FLAGS=@INSTALL_OPTS@

.pm :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.pl :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.sh :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

$(libexec_SCRIPTS) : $(EXTRA_DIST)
	$(ECHO) "#! #PERL# -w" | $(AWK) -f ./subst > $@
	$(ECHO) "# nagios: +epn" >> $@
	$(ECHO) >> $@
	if [ "${STANDALONE}" == "yes" ]; then \
		$(ECHO) i am standalone; \
		for m in ${GL_MODULES}; do \
			$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
		done \
	fi
	for m in ${EXTRA_MODULES}; do \
		$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
	done
	$(ECHO) >> $@
	$(CAT) $(libexec_SCRIPTS).pl | $(AWK) -f ./subst >> $@
	chmod +x $@

